@startuml Sistema de Gestor de Contanctos
title Modelo de Dominio - Sistema Gestor de Contactos

class Usuario 
class Contacto
class SolicitudCompartir 
class SistemaUsuarios 

' Usuario tiene muchos contactos
Usuario "1" --> "*" Contacto : posee 

' Solicitudes enviadas por un usuario
Usuario "1" --> "*" SolicitudCompartir : envia 

' Solicitudes recibidas por un usuario
Usuario "1" <-- "*" SolicitudCompartir : recibe 

' SistemaUsuarios administra a varios usuarios
SistemaUsuarios "1" --> "*" Usuario : contiene 

@enduml